# drAIn

./: .gitignore  README.md  pyproject.toml
Dockerfiles/: Dockerfile.dev  Dockerfile.full  Dockerfile.lite
drAIn/: cli.py  models.py  version.py
tests/: test_models_init.py  test_module_basics.py
